src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_NonSetterInStyleSetters.xaml
<DockPanel
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
>
    <DockPanel.Resources>
        <Style TargetType="{x:Type ListBox}">
            <Style.Setters>
                <Setter Property="SelectionMode" Value="Extended" />
                // A DP declared on an ancestor
                <Setter Property="Control.Background" Value="Yellow" />
            </Style.Setters>
        </Style>
    </DockPanel.Resources>

    <ListBox Name="ListBox0">
        <ListBox.Items>
            <ListBoxItem> 1 </ListBoxItem>
            <ListBoxItem> 2 </ListBoxItem>
        </ListBox.Items>
    </ListBox>
</DockPanel>
